# ai-search-monitor

./: .gitignore  DEPLOYMENT.md  README.md  start_demo.sh
backend/: .env.example  Dockerfile  alembic.ini  check_data.py  debug_scores.py  final_dump.txt  pyproject.toml  pytest_output.txt
backend/scripts/: backfill_classification.py  check_classification.py  clear_data.py  debug_fetch.py  debug_minimal.py  debug_minimal_imports.py  debug_upsert.py  dump_companies_for_review.py  find_jobs_missing_descriptions.py  inspect_meta.py  reclassify_companies.py
backend/src/api/: main.py
backend/src/api/routers/: companies.py  jobs.py  stats.py
backend/src/core/: config.py  logging.py
backend/src/db/: models.py  reset.py  session.py
backend/src/db/migrations/: env.py  script.py.mako
backend/src/db/migrations/versions/: 170ab4005aea_add_classification_to_companies.py  62b7b898edba_add_missing_job_fields.py  6aaf5ea2e8bd_add_company_industry.py  eac39ace7109_add_job_role_tier.py  f4a19fd44037_initial_schema.py
backend/src/ingestion/: competitor_intel.py  enrich.py  pipeline.py  upsert.py
backend/src/ingestion/sources/: base.py  demo.py  linkedin.py  mock.py  seojobs.py
backend/src/semantic/: classifier.py  classifier_company.py  clustering.py  embedder.py  opportunity_classifier.py  schema.py
backend/tests/: conftest.py  test_api.py  test_company_classification.py  test_enrichment.py  test_semantic_classifiers.py  test_upsert.py
frontend/app/: layout.tsx  page.tsx
frontend/components/: CompanyTable.tsx  StatsBar.tsx
infra/: docker-compose.yml
(+2 files in other folders)
