[project]
name = "ai-search-monitor-backend"
version = "0.1.0"
description = "Backend for AI Search Monitor"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "asyncpg>=0.28.0",
    "pgvector>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "selectolax>=0.3.0",
    "playwright>=1.35.0",
    "structlog>=23.1.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
